fix: bottom part of page inaccessible on mobile

--- a/assets/picker.css
+++ b/assets/picker.css
@@ -2,6 +2,6 @@
   position: fixed !important;
   top: 0 !important;
   left: 0 !important;
-  width: 100vw !important;
-  height: 100vh !important;
+  width: 100% !important;
+  height: 100% !important;
 }
